Refactor navigation links to use list items for better semantics and styling

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </div>
             <div class="">
                 <ul class="linkerNav">
-                    <a>About</a>
-                    <a>Skills</a>
-                    <a>Projects</a>
-                    <a>Contact</a>
+                    <li>About</li>
+                    <li>Skills</li>
+                    <li>Projects</li>
+                    <li>Contact</li>
                 </ul>
             </div>
         </div>
