add the tools section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,14 @@
                                 projects
                             </p>
                         </div>
-
+                    </div>
+                    <p>Tools i use</p>
+                    <div class="toolsFlex">
+                        <img class="iconsTool" src="images/1.png" alt="">
+                        <img class="iconsTool" src="images/2.png" alt="">
+                        <img class="iconsTool" src="images/3.png" alt="">
+                        <img class="iconsTool" src="images/4.png" alt="">
+                        
                     </div>
                 </div>
             </div>
