Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-    <!-- Navbar -->
+   <div class="bg1">
+     <!-- Navbar -->
     <div class="container">
         <div class="navFlex">
             <div class="namePlate">
@@ -48,6 +49,7 @@
 
     </div>
     <!-- Hero section -->
+   </div>
 
     <!-- About me part -->
     <div class="about" id="about">
