Add the skills and services section

--- a/index.html
+++ b/index.html
@@ -15,41 +15,43 @@
 </head>
 
 <body>
-   <div class="bg1">
-     <!-- Navbar -->
-    <div class="container">
-        <div class="navFlex">
-            <div class="namePlate">
-                <h1>Hubert Gomes<span class="text-red">.</span></h1>
-            </div>
-            <div class="">
-                <ul class="linkerNav">
-                    <a href="#about"><li>About</li></a>
-                    <li>Skills</li>
-                    <li>Projects</li>
-                    <li>Contact</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- Navbar -->
-
-    <!-- Hero section -->
-    <div class="hero">
+    <div class="bg1">
+        <!-- Navbar -->
         <div class="container">
-            <img src="images/hubert_gomes.jpg" alt="" class="imageME">
-            <p class="hText1">I'm Hubert Dhrubo Gomes</p>
-            <div class="hWidth">
-                <h1 class="hText2">Frontend web developer based in Bangladesh.</h1>
+            <div class="navFlex">
+                <div class="namePlate">
+                    <h1>Hubert Gomes<span class="text-red">.</span></h1>
+                </div>
+                <div class="">
+                    <ul class="linkerNav">
+                        <a href="#about">
+                            <li>About</li>
+                        </a>
+                        <li>Skills</li>
+                        <li>Projects</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
             </div>
-            <a href="">
-                <button class="btn1">Contact with me</button>
-            </a>
         </div>
+        <!-- Navbar -->
 
+        <!-- Hero section -->
+        <div class="hero">
+            <div class="container">
+                <img src="images/hubert_gomes.jpg" alt="" class="imageME">
+                <p class="hText1">I'm Hubert Dhrubo Gomes</p>
+                <div class="hWidth">
+                    <h1 class="hText2">Frontend web developer based in Bangladesh.</h1>
+                </div>
+                <a href="">
+                    <button class="btn1">Contact with me</button>
+                </a>
+            </div>
+
+        </div>
+        <!-- Hero section -->
     </div>
-    <!-- Hero section -->
-   </div>
 
     <!-- About me part -->
     <div class="about" id="about">
@@ -96,7 +98,7 @@
                         <img class="iconsTool" src="images/2.png" alt="">
                         <img class="iconsTool" src="images/3.png" alt="">
                         <img class="iconsTool" src="images/4.png" alt="">
-                        
+
                     </div>
                 </div>
             </div>
@@ -104,6 +106,83 @@
         </div>
     </div>
     <!-- About me part -->
+
+    <!-- Skills part -->
+    <div class="skills">
+        <div class="container">
+            <div class="aboutT1">
+                <p class="aboutP2">My skills</p>
+            </div>
+            <div class="textSkills">
+                <p>Frontend Developer skilled in building responsive, user-friendly, and modern web interfaces.
+                    Experienced with JavaScript, React, and Tailwind CSS, with a strong focus on clean code, component
+                    reusability, and performance optimization. Passionate about turning ideas into functional and
+                    visually appealing digital experiences.</p>
+            </div>
+            <div class="">
+                <p class="skillsP3">The tools I used and mastered at</p>
+                <div class="flex">
+                    <img class="photoSize" src="images/html.png">
+                    <img class="photoSize" src="images/css.png" alt="">
+                    <img class="photoSize" src="images/js.png" alt="">
+                    <img class="photoSize" src="images/tailwind.png" alt="">
+                    <img class="photoSize" src="images/jsx.png" alt="">
+                    <img class="photoSize" src="images/icons8-firebase-100.png" alt="">
+                </div>
+            </div>
+            <p class="skillsP3 title">What I can offer you</p>
+            <div class="textOFSkills">
+                <p class="headOfSkills">Web Design</p>
+                <p class="paraOfSkills">
+                    In my web design work, I focus on creating clean, modern, and user-friendly interfaces that balance
+                    both aesthetics and functionality. I enjoy transforming ideas into visually appealing layouts,
+                    paying close attention to color schemes, typography, and responsive design to ensure a seamless
+                    experience across all devices. My approach combines creativity with usability, so every project not
+                    only looks great but also delivers smooth navigation and accessibility. Whether it’s designing from
+                    scratch or improving an existing layout, I aim to craft designs that leave a lasting impression and
+                    help brands stand out online.</p>
+            </div>
+
+
+            <div class="textOFSkills">
+                <p class="headOfSkills right">Responsive Website</p>
+                <p class="paraOfSkills right">
+                    I build responsive websites that adapt flawlessly to any screen size, ensuring users get the best
+                    experience whether they’re browsing on a phone, tablet, or desktop. My focus is on creating layouts
+                    that adjust smoothly without losing design quality or functionality. By using modern techniques like
+                    flexible grids, fluid images, and media queries, I make sure every project is both visually
+                    appealing and practical across devices. A responsive site isn’t just about looking good—it’s about
+                    making content accessible, fast, and easy to interact with for every visitor.</p>
+            </div>
+
+
+            <div class="textOFSkills">
+                <p class="headOfSkills">Figma To React JS</p>
+                <p class="paraOfSkills">
+                    I specialize in converting Figma designs into fully functional React.js applications with clean,
+                    reusable, and scalable code. My process starts with analyzing the design details—layouts,
+                    typography, colors, and interactions—and then translating them into pixel-perfect components that
+                    bring the UI to life. I focus on writing modular code, following best practices, and keeping
+                    performance in mind so the final product not only matches the design but also delivers a smooth user
+                    experience. This skill allows me to bridge the gap between design and development, turning creative
+                    ideas into interactive, production-ready web apps.</p>
+            </div>
+
+
+            <div class="textOFSkills">
+                <p class="headOfSkills right">Adding Various Functionality</p>
+                <p class="paraOfSkills right">
+                    I focus on enhancing websites and applications by adding various functionalities that improve
+                    usability and engagement. From interactive components like dynamic forms, modals, and dropdowns to
+                    more advanced features such as API integrations, authentication systems, and real-time updates, I
+                    make sure every functionality serves a purpose. My goal is to go beyond static designs and bring
+                    projects to life with smooth, reliable, and user-friendly features. By combining problem-solving
+                    with clean coding practices, I ensure each functionality not only works flawlessly but also adds
+                    real value to the overall user experience.</p>
+            </div>
+        </div>
+    </div>
+    <!-- Skills part -->
 
 </body>
 
