The showcase or the projects section has been added and also make that reponsive for Tablet and mobile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                         <a href="#about">
                             <li>About</li>
                         </a>
-                        <li>Skills</li>
+                        <a href="#skills">
+                            <li>Skills</li>
+                        </a>
                         <li>Projects</li>
                         <li>Contact</li>
                     </ul>
@@ -108,7 +110,7 @@
     <!-- About me part -->
 
     <!-- Skills part -->
-    <div class="skills">
+    <div class="skills" id="skills">
         <div class="container">
             <div class="aboutT1">
                 <p class="aboutP2">My skills</p>
@@ -183,6 +185,87 @@
         </div>
     </div>
     <!-- Skills part -->
+
+
+    <!-- Project part  -->
+    <div class="projects">
+        <div class="container">
+            <div class="projectsHead">
+                <p class="proP1">My projects</p>
+                <p class="proP2">My latest work</p>
+                <p class="proP3">Welcome to my web development portfolio! Explore a collection of projects showcasing
+                    my expertise in front-end development.
+                    my expertise in front-end development.</p>
+            </div>
+
+            <!-- Images and sowcase part -->
+            <div class="showCase">
+                <div class="imgShowCase">
+                    <img class="imageFit" src="images/orebi2.png" alt="">
+                    <div class="optionInHover flexInside">
+                        <div class="">
+                            <p class="showP1">Orebi</p>
+                            <p class="showP2">E-Commerce Website</p>
+                        </div>
+                        <div class="">
+                            <a href="https://orebi-azure.vercel.app/" target="_blank"><i
+                                    class="fa-solid fa-link boroText"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="imgShowCase">
+                    <img class="imageFit" src="images/weather.png" alt="">
+                    <div class="optionInHover flexInside">
+                        <div class="">
+                            <p class="showP1">WeatherMe</p>
+                            <p class="showP2">Weather Forecast App</p>
+                        </div>
+                        <div class="">
+                            <a href="https://weatherme-five.vercel.app/" target="_blank"><i
+                                    class="fa-solid fa-link boroText"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="imgShowCase">
+                    <img class="imageFit" src="images/todo.png" alt="">
+                    <div class="optionInHover flexInside">
+                        <div class="">
+                            <p class="showP1">ToDo and Notes</p>
+                            <p class="showP2">The simple task management app.</p>
+                        </div>
+                        <div class="">
+                            <a href="https://to-do-app-4qrs.vercel.app/" target="_blank"><i
+                                    class="fa-solid fa-link boroText"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="imgShowCase">
+                    <img class="imageFit" src="images/uomo2.png" alt="">
+                    <div class="optionInHover flexInside">
+                        <div class="">
+                            <p class="showP1">UOMO</p>
+                            <p class="showP2">E-Commerce Website</p>
+                        </div>
+                        <div class="">
+                            <a href="https://uomo-beta.vercel.app/" target="_blank"><i
+                                    class="fa-solid fa-link boroText"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- Images and sowcase part -->
+        </div>
+    </div>
+    <!-- Project part  -->
 
 </body>
 
