Add projects section link and enable smooth scrolling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                         <a href="#skills">
                             <li>Skills</li>
                         </a>
-                        <li>Projects</li>
+                        <a href="#projects">
+                            <li>Projects</li>
+                        </a>
+                        
                         <li>Contact</li>
                     </ul>
                 </div>
@@ -188,7 +191,7 @@
 
 
     <!-- Project part  -->
-    <div class="projects">
+    <div class="projects" id="projects">
         <div class="container">
             <div class="projectsHead">
                 <p class="proP1">My projects</p>
